--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
 }
 
 dependencies {
+    //gif파일 쉬운 삽입을 위한 Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.google.firebase:firebase-firestore:23.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     //갤러리로 부터 사진 쉽게 가져요기 위한 Picasso
     implementation 'com.squareup.picasso:picasso:2.8'
     //Circle ImageView
@@ -49,6 +53,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
