--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
             android:name="com.bigjeon.grumbling.Chatting_Activity"
-            android:windowSoftInputMode="adjustNothing">
+            android:windowSoftInputMode="adjustResize">
         </activity>
         <activity android:name="com.bigjeon.grumbling.User_Profile_View_activity" />
         <activity android:name="com.bigjeon.grumbling.Show_Selected_Post_Activity" />
