--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name="com.bigjeon.grumbling.Setting_My_Profile_Activity"></activity>
         <activity
             android:name="com.bigjeon.grumbling.Chatting_Activity"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity android:name="com.bigjeon.grumbling.User_Profile_View_activity" />
         <activity android:name="com.bigjeon.grumbling.Show_Selected_Post_Activity" />
         <activity android:name="com.bigjeon.grumbling.Google_Login_Activity" />
