--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     //갤러리로 부터 사진 쉽게 가져요기 위한 Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
