--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,14 +43,15 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'com.google.firebase:firebase-database:20.0.0'
-    implementation 'com.google.firebase:firebase-messaging:22.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     //갤러리로 부터 사진 쉽게 가져요기 위한 Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:28.2.1')    // Add the dependency for the Firebase SDK for Google Analytics
+    implementation platform('com.google.firebase:firebase-bom:28.2.0')    // Add the dependency for the Firebase SDK for Google Analytics
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-analytics'
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
     // Declare the dependency for the Firebase Authentication library
