--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name="com.bigjeon.grumbling.Post_Write_Activity"></activity>
+        <activity android:name="com.bigjeon.grumbling.Post_Write_Activity"
+            android:windowSoftInputMode="adjustNothing"/>
         <activity android:name="com.bigjeon.grumbling.P2P_Chatting_Activity" />
         <activity android:name="com.bigjeon.grumbling.Notification_Activity" />
         <activity android:name="com.bigjeon.grumbling.Setting_My_Profile_Activity" />
