--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
 }
 
 dependencies {
+    //retrofit(서버통신)
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //gson(서버통신)
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //스와이프 가능 프레그컨트 컨테이너를 위한 ViewPgaer2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     //gif파일 쉬운 삽입을 위한 Glide
