--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,21 +19,31 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name="com.bigjeon.grumbling.Post_Write_Activity"
             android:windowSoftInputMode="adjustNothing"/>
-        <activity android:name="com.bigjeon.grumbling.P2P_Chatting_Activity" />
+        <activity android:name="com.bigjeon.grumbling.P2P_Chatting_Activity">
+            <intent-filter>
+                <action android:name=".P2P"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+            </intent-filter>
+        </activity>
         <activity android:name="com.bigjeon.grumbling.Notification_Activity" />
         <activity android:name="com.bigjeon.grumbling.Setting_My_Profile_Activity" />
         <activity
             android:name="com.bigjeon.grumbling.Chatting_Activity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name="com.bigjeon.grumbling.User_Profile_View_activity" />
-        <activity android:name="com.bigjeon.grumbling.Show_Selected_Post_Activity" />
+        <activity android:name="com.bigjeon.grumbling.Show_Selected_Post_Activity">
+            <intent-filter>
+                <action android:name=".Post"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+            </intent-filter>
+        </activity>
         <activity android:name="com.bigjeon.grumbling.Google_Login_Activity" />
         <activity android:name="com.bigjeon.grumbling.Set_User_Profile_Activity" />
-        <activity android:name="com.bigjeon.grumbling.App_Main_Activity" />
+        <activity android:name="com.bigjeon.grumbling.App_Main_Activity">
+        </activity>
         <activity android:name="com.bigjeon.grumbling.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
