--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/main_app_icon_round"
         android:supportsRtl="true"
+        android:screenOrientation="portrait"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name="com.bigjeon.grumbling.Post_Write_Activity"
             android:windowSoftInputMode="adjustNothing"/>
@@ -29,7 +30,12 @@
         <activity android:name="com.bigjeon.grumbling.Setting_My_Profile_Activity" />
         <activity
             android:name="com.bigjeon.grumbling.Chatting_Activity"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustResize">
+            <intent-filter>
+                <action android:name=".Chatting"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+            </intent-filter>
+        </activity>
         <activity android:name="com.bigjeon.grumbling.User_Profile_View_activity">
             <intent-filter>
                 <action android:name=".Friend"></action>
@@ -65,6 +71,9 @@
             android:enabled="true"
             android:stopWithTask="false">
         </service>
+
+        <meta-data android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_app_id"/>
     </application>
 
 </manifest>
