First_Beta_Ver_Publishing_Complete_Commit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,11 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.grumbling"
-        minSdkVersion 23
+        applicationId "com.bigjeon.grumbling"
+        minSdkVersion 26
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
