--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:allowBackup="false"
         android:hardwareAccelerated="true"
         android:largeHeap="true"
-        android:icon="@mipmap/main_app_icon"
+        android:icon="@mipmap/main_release_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/main_app_icon_round"
+        android:roundIcon="@mipmap/main_release_icon_round"
         android:supportsRtl="true"
         android:screenOrientation="portrait"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
