--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/main_release_icon_round"
         android:supportsRtl="true"
         android:screenOrientation="portrait"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.Grumbling">
         <activity android:name="com.bigjeon.grumbling.Post_Write_Activity"
             android:windowSoftInputMode="adjustNothing"/>
         <activity android:name="com.bigjeon.grumbling.P2P_Chatting_Activity">
